updated README with links to PDF codebooks and descriptions

--- a/codebooks/covid_testing_codebook.Rmd
+++ b/codebooks/covid_testing_codebook.Rmd
@@ -16,7 +16,7 @@ library(flextable)
 
 ## COVID-19 Testing Dataset Codebook
 
-Source: This data set is from Amrom E. Obstfeld, who de-identified data on COVID-19 testing during 2020 at CHOP (Children's Hospital of Pennsylvania.
+Source: This data set is from Amrom E. Obstfeld, who de-identified data on COVID-19 testing during 2020 at CHOP (Children's Hospital of Pennsylvania).
 
 This data set contains data concerning testing for SARS-CoV2 via PCR as well as associated metadata. The data has been anonymized, time-shifted, and permuted
 
